log
gcc -DTESTING			 -c -g -Wall -DDEBUG whohas_handler.c
whohas_handler.c: In function ‘whohas_req’:
whohas_handler.c:284:13: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
         ptr =  whohas_packet + offset;
             ^
whohas_handler.c:285:18: warning: assignment makes integer from pointer without a cast [enabled by default]
         ptr_hash = &(line[i+1]);
                  ^
whohas_handler.c:288:13: warning: passing argument 1 of ‘text2num’ makes pointer from integer without a cast [enabled by default]
             *ptr = text2num(ptr_hash); // Copying from file to packet 
             ^
In file included from whohas_handler.c:11:0:
whohas_handler.h:76:6: note: expected ‘char *’ but argument is of type ‘char’
 char text2num(char* input);
      ^
whohas_handler.c:306:5: warning: implicit declaration of function ‘prep_whohas_hdr’ [-Wimplicit-function-declaration]
     prep_whohas_hdr(whohas_packet, nchunks);
     ^
whohas_handler.c: In function ‘whohas_resp’:
whohas_handler.c:367:13: warning: pointer targets in assignment differ in signedness [-Wpointer-sign]
         ptr =  ihave_packet + offset;
             ^
whohas_handler.c:368:18: warning: assignment makes integer from pointer without a cast [enabled by default]
         ptr_hash = &(line[i+1]);
                  ^
whohas_handler.c:372:17: warning: passing argument 1 of ‘text2num’ makes pointer from integer without a cast [enabled by default]
                 temp_hash[k]    = text2num(ptr_hash); 
                 ^
In file included from whohas_handler.c:11:0:
whohas_handler.h:76:6: note: expected ‘char *’ but argument is of type ‘char’
 char text2num(char* input);
      ^
whohas_handler.c:411:5: warning: pointer targets in passing argument 1 of ‘prep_ihave_hdr’ differ in signedness [-Wpointer-sign]
     prep_ihave_hdr(ihave_packet, nchunks);
     ^
In file included from whohas_handler.c:11:0:
whohas_handler.h:75:6: note: expected ‘char *’ but argument is of type ‘unsigned char *’
 void prep_ihave_hdr(char* ihave_packet, int nchunks);
      ^
whohas_handler.c: At top level:
whohas_handler.c:426:6: warning: conflicting types for ‘prep_whohas_hdr’ [enabled by default]
 void prep_whohas_hdr(char* whohas_packet, int nchunks) {
      ^
whohas_handler.c:306:5: note: previous implicit declaration of ‘prep_whohas_hdr’ was here
     prep_whohas_hdr(whohas_packet, nchunks);
     ^
whohas_handler.c: In function ‘data_packet_handler’:
whohas_handler.c:635:2: warning: pointer targets in passing argument 1 of ‘shahash’ differ in signedness [-Wpointer-sign]
  shahash(peer_buf[peer->id].data,peer_buf[peer->id].data_received, hash);
  ^
In file included from whohas_handler.c:14:0:
chunk.h:28:8: note: expected ‘uint8_t *’ but argument is of type ‘char *’
   void shahash(uint8_t *chr, int len, uint8_t *target);
        ^
whohas_handler.c: In function ‘get_resp’:
whohas_handler.c:710:4: warning: implicit declaration of function ‘fstat’ [-Wimplicit-function-declaration]
    fstat (data_fd, &statbuf);
    ^
whohas_handler.c:734:10: warning: pointer targets in passing argument 5 of ‘create_chunk_pkts’ differ in signedness [-Wpointer-sign]
          &(peer_send_info[peer->id].data[1040*i]));
          ^
whohas_handler.c:139:6: note: expected ‘uint8_t *’ but argument is of type ‘char *’
 void create_chunk_pkts(int type, short pkt_len, u_int seq, u_int ack, 
      ^
whohas_handler.c: In function ‘send_ack’:
whohas_handler.c:754:41: error: ‘config’ undeclared (first use in this function)
     bt_peer_t* peer = bt_peer_get_addr(&config, peer_num);
                                         ^
whohas_handler.c:754:41: note: each undeclared identifier is reported only once for each function it appears in
whohas_handler.c: In function ‘send_chunk’:
whohas_handler.c:773:41: error: ‘config’ undeclared (first use in this function)
     bt_peer_t* peer = bt_peer_get_addr(&config, peer_num);
                                         ^
whohas_handler.c:775:5: warning: passing argument 1 of ‘hostToNet’ from incompatible pointer type [enabled by default]
     hostToNet(&(peer_send_info[peer_num].data[1040*(seq_num-1)]));
     ^
whohas_handler.c:102:6: note: expected ‘struct data_packet_t *’ but argument is of type ‘char *’
 void hostToNet(data_packet_t* pkt) {
      ^
make: *** [whohas_handler.o] Error 1
